--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ header .profile-image {
   margin-top: 50px;
   width: 150px;
   height: 150px;
-  border-radius: 50%;
+  border-radius: 10%;
   border: 3px solid white;
   transition: all .5s;
 }
@@ -92,7 +92,7 @@ header .profile-image:hover {
   padding: 20px 40px 40px;
   max-width: 500px;
   text-align: left;
-  background: rgba(143, 148, 143, 0.3);;
+  background: rgba(143, 148, 143, 0.3);
   border: 2px solid #ccc;
   border-radius: 6px;
   transition: all .5s;
@@ -101,11 +101,20 @@ header .profile-image:hover {
 }
 .card:hover {
   border-color: #ff99ff;
+  background: rgba(143, 148, 143, 0.2);
 }
 
+/* credit photo: https://wallpapersafari.com/w/qCrgLd */
 body {
-  background: url('images/header_background.jpg') no-repeat top center ;
+  background: url('images/background.jpg') no-repeat top center ;
   background-size: cover;
+}
+
+body .piano {
+  float: none;
+  height: 250px;
+  margin-top: 10px;
+  
 }
 
 footer {
