--- a/styles.css
+++ b/styles.css
@@ -60,14 +60,15 @@ a:hover {
 header {
   text-align: center;
   overflow: hidden;
-  padding-top: 40px;
+  padding-top: 30px;
   padding-bottom: 40px;
 }
+
 header {
   line-height: 1.5;
 }
 header .profile-image {
-  margin-top: 100px;
+  margin-top: 80px;
   width: 150px;
   height: 150px;
   border-radius: 10%;
@@ -77,23 +78,33 @@ header .profile-image {
 header .profile-image:hover {
   transform: scale(1.2) rotate(5deg);
 }
+
+.header-experience {
+  text-align: center;
+  overflow: hidden;
+  padding-top: 150px;
+  padding-bottom: 20px;
+}
+
 .tag {
   background-color: rgba(118, 122, 118, 0.2);
-  color: rgb(252, 228, 175);
+  color: blanchedalmond;
   padding: 10px;
-  
   border-radius: 5px;
   display: table;
   margin: 10px auto;
 } 
-.location {
+.welcome {
   background-color: #222;
   color: rgb(233, 233, 233);
+  margin-bottom: 10px;
 }
 .card {
-  margin: 30px;
-  padding: 20px 40px 40px;
-  max-width: 525px;
+  margin: 20px;
+  margin-top: 0;
+  margin-bottom: 30px;
+  padding: 20px 35px 25px;
+  max-width: 500px;
   text-align: left;
   background: rgba(143, 148, 143, 0.3);
   border: 2px hidden #ccc;
@@ -105,9 +116,25 @@ header .profile-image:hover {
 .card:hover {
   background: rgba(143, 148, 143, 0.2);
 }
-.card-list {
- color: bisque;
+
+ul.goals {
+  padding: 0;
+  text-align: center;
 }
+
+.goals li {
+  border-radius: 6px;
+  display: inline-block;
+  background: rgba(143, 148, 143, 0.2);
+  color: bisque;
+  padding: 5px 10px;
+  margin: 2px;
+}
+
+.goals li:hover {
+  background-color: rgba(204, 204, 204, 0.2);
+}
+
 /* credit photo: https://www.wallpaperflare.com/stroke-artwork-abstract-coloured-lines-minimalist-minimalism-wallpaper-mbygi/download/1920x1080 */
 body {
   background: url('images/background.jpg') no-repeat top center ;
@@ -115,13 +142,26 @@ body {
 }
 
 h2 {
-  color: rgb(255, 254, 208);
+  color: rgb(255, 219, 175);
 }
 
-body .piano {
-  float: none;
-  height: 250px;
-  margin-top: 20px;
+.card dl {
+  line-height: 1.6;
+}
+
+.image {
+  height: 400px;
+  border: hidden;
+  background-color: rgba(204, 204, 204, 0.2);
+  margin: 10px;
+  padding: 20px 20px 20px;
+  border-radius: 6px;
+  transition: all .5s;
+}
+
+.image:hover {
+  transform: scale(1.2);
+  background-color: rgba(204, 204, 204, 0);
 }
 
 footer {
@@ -186,14 +226,16 @@ a.social:hover {
   }
 
   header {
-    min-height: 400px;
+    min-height: 300px;
+  }
+  .header-experience {
+    min-height: 200px;
   }
 
   .nav {
     max-width: 1200px;
     padding: 0 30px;
   }
-
 
   main {
     padding-top: 20px;
