--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ header {
   line-height: 1.5;
 }
 header .profile-image {
-  margin-top: 80px;
+  margin-top: 90px;
   width: 150px;
   height: 150px;
   border-radius: 10%;
@@ -88,17 +88,18 @@ header .profile-image:hover {
 
 .tag {
   background-color: rgba(118, 122, 118, 0.2);
-  color: blanchedalmond;
+  color: bisque;
   padding: 10px;
   border-radius: 5px;
   display: table;
   margin: 10px auto;
 } 
+
 .welcome {
-  background-color: #222;
   color: rgb(233, 233, 233);
   margin-bottom: 10px;
 }
+
 .card {
   margin: 20px;
   margin-top: 0;
@@ -115,6 +116,11 @@ header .profile-image:hover {
 }
 .card:hover {
   background: rgba(143, 148, 143, 0.2);
+}
+
+.cardquote {
+  padding: 0px 20px 10px;
+  border-radius: 6px;
 }
 
 ul.goals {
