--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ header .profile-image:hover {
   background: rgba(143, 148, 143, 0.2);
 }
 
-.cardquote {
+.quote {
   padding: 0px 20px 10px;
 }
 
@@ -201,12 +201,7 @@ a.social {
   opacity: .7;
   transition: all .5s;
 }
-a.twitter {
-  background-image: url(images/twitter.svg);
-}
-a.linkedin {
-  background-image: url(images/linkedin.svg);
-}
+
 a.github {
   background-image: url(images/github.svg);
 }
